// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NamespaceUnderFieldTransform works 1`] = `
"type Query {
  wrapper: Wrapper!
}

type Mutation {
  mutation: String
}

type Wrapper {
  query: String
}"
`;

exports[`StripNonQueryTransform works 1`] = `
"type Query {
  query: String
}"
`;
